# local-grafana-stack

./: README.md  docker-compose.yml  run-k6.sh
config/alloy/: config.alloy
config/grafana/: datasources.yml
config/mimir/: config.yml
config/tempo/: config.yml
k6/: basic-load.js  error-test.js  profiling-test.js  soak-test.js  spike-test.js  stress-test.js
rust-app/: .dockerignore  Cargo.toml  Dockerfile
rust-app/src/: main.rs
