[package]
name = "observability-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace"] }

# OpenTelemetry for metrics, logs, and traces
opentelemetry = "0.31"
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "metrics", "logs", "trace"] }

# Tracing and logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.32"
opentelemetry-appender-tracing = "0.31"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Continuous Profiling
pyroscope = "0.5"
pyroscope_pprofrs = "0.2"

# Utilities
anyhow = "1.0"
